<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2021 NetEase, Inc.  All rights reserved.
  ~  Use of this source code is governed by a MIT license that can be found in the LICENSE file
  -->

<resources>
    <string name="biz_live_login_btn_login">登录</string>
    <string name="biz_live_load_more">上拉加载更多</string>
    <string name="biz_live_have_no_more">没有更多了</string>
    <string name="biz_live_filter">滤镜</string>
    <string name="biz_live_beauty">美颜</string>
    <string name="biz_live_setting">设置</string>
    <string name="biz_live_demo_user_warning">本应用为测试产品、请勿商用。单次直播最长10分钟，每个频道最多10人</string>
    <string name="biz_live_set_cover">设置封面</string>
    <string name="biz_live_beauty_white">美白</string>
    <string name="biz_live_beauty_skin">磨皮</string>
    <string name="biz_live_thin_face">瘦脸</string>
    <string name="biz_live_big_eye">大眼</string>
    <string name="biz_live_reset_pre">恢复预设</string>
    <string name="biz_live_saturability">饱和度</string>
    <string name="biz_live_pull_to_refresh">下拉更新</string>
    <string name="biz_live_release_to_refresh">松开更新</string>
    <string name="biz_live_refreshing">更新中...</string>
    <string name="biz_live_self">我方</string>
    <string name="biz_live_other">对方</string>
    <string name="biz_live_start_new_live">开启直播间</string>
    <string name="biz_live_pk_live">PK直播</string>
    <string name="biz_live_link_seats_status">连麦状态</string>
    <string name="biz_live_beauty_text">美颜</string>
    <string name="biz_live_filter_text">滤镜</string>
    <string name="biz_live_hangup_text">挂断</string>
    <string name="biz_live_camera_text">摄像头</string>
    <string name="biz_live_microphone_text">麦克风</string>
    <string name="biz_live_waiting_anchor_accept_link_seats">等待主播接受连麦申请…</string>
    <string name="biz_live_cancel">取消</string>
    <string name="biz_live_anchor_reject_link_seats_apply">主播拒绝了你的连麦申请</string>
    <string name="biz_live_i_know">知道了</string>
    <string name="biz_live_invite_join_seats">邀请上麦</string>
    <string name="biz_live_anchor_invite_audience_join_seats">主播邀请你上麦</string>
    <string name="biz_live_join_seats">上麦</string>
    <string name="biz_live_audience_reject_link_seats_invited">对方拒绝了你的邀请</string>
    <string name="biz_live_permission_error_tips">需要同意相机和麦克风权限才能正常连麦哦~</string>
    <string name="biz_live_anchor_invite_success">邀请成功</string>
    <string name="biz_live_have_accepted">已接受</string>
    <string name="biz_live_have_reject">已拒绝</string>
    <string name="biz_live_have_leave_seat">已下麦</string>
    <string name="biz_live_anchor_close_your_camera">主播关闭了你的摄像头</string>
    <string name="biz_live_anchor_open_your_camera">主播打开了你的摄像头</string>
    <string name="biz_live_anchor_close_your_microphone">主播关闭了你的麦克风</string>
    <string name="biz_live_anchor_open_your_microphone">主播打开了你的麦克风</string>
    <string name="biz_live_anchor_kick_audience">您已被主播踢下麦位</string>
    <string name="biz_live_seat_leave">断开连麦</string>
    <string name="biz_live_have_kick_seat">已踢下麦</string>
    <string name="biz_live_network_error">网络异常</string>
    <string name="biz_live_audience_count">观众数：</string>
    <string name="biz_live_send_gift">送礼物</string>
    <string name="biz_live_coin">云币</string>
    <string name="biz_live_you_have_success_reject_anchor_invite">您已成功拒绝了主播的连麦邀请</string>
    <string name="biz_live_reward_failed">打赏礼物失败</string>
    <string name="biz_live_follow_anchor_be_lost">跟主播走丢了</string>
    <string name="biz_live_live_is_end">直播已结束啦</string>
    <string name="biz_live_link_seat_duration">连麦中，通话时长:%s</string>
    <string name="biz_live_has_been_logout_by_other_devices">已被其他设备踢出</string>
    <string name="biz_live_sure">确认</string>
    <string name="biz_live_multiple_login_tips">暂不支持多台设备进入同一直播间，\n您可以去其他直播间转转～</string>
    <string name="biz_live_ten_thousand">万</string>
    <string name="biz_live_hundred_million">亿</string>
    <string name="biz_live_enter_room">进入直播间</string>
    <string name="biz_live_leave_room">离开直播间</string>
    <string name="biz_live_has_success_enter_seat">已成功上麦</string>
    <string name="biz_live_has_leave_seat">已下麦</string>
    <string name="biz_live_count">个</string>
    <string name="biz_live_donate">赠送了</string>
    <string name="biz_live_hangup">挂断</string>
    <string name="biz_live_sure_hanup_link_seat">是否挂断与%s的连麦？</string>
    <string name="biz_live_end_live">结束直播</string>
    <string name="biz_live_flip">翻转</string>
    <string name="biz_live_earback">耳返</string>
    <string name="biz_live_more">更多</string>
    <string name="biz_live_apply_seat">连麦申请</string>
    <string name="biz_live_apply_seat_manager">连麦管理</string>
    <string name="biz_live_start_audio_dump">开始dump音频</string>
    <string name="biz_live_dump_end">dump已结束</string>
    <string name="biz_live_glow_stick">荧光棒</string>
    <string name="biz_live_arrange">安排</string>
    <string name="biz_live_sports_car">跑车</string>
    <string name="biz_live_rockets">火箭</string>
    <string name="biz_live_try_again_after">稍后再试</string>
    <string name="biz_live_skd_init_failed">SDK 初始化失败</string>
    <string name="biz_live_opposite_anchor_network_poor">对方主播网络较差</string>
    <string name="biz_live_opposite_anchor_network_unkonwn">对方主播网络状态未知</string>
    <string name="biz_live_network_disconnect">网络连接断开</string>
    <string name="biz_live_insert_earphones_before_open_earback">打开耳返功能前，请先插入耳机！</string>
    <string name="biz_live_is_pking_please_try_again_later">正在连线中，请取消后再试</string>
    <string name="biz_live_the_other_party_has_accepted_please_wait_a_moment">对方已经接受，请稍等</string>
    <string name="biz_live_determine">确定</string>
    <string name="biz_live_invite">邀请“</string>
    <string name="biz_live_invite_pk">邀请PK</string>
    <string name="biz_live_sure_invite">确定邀请</string>
    <string name="biz_live_for_pk">进行PK？</string>
    <string name="biz_live_pk_linking">PK连线中…</string>
    <string name="biz_live_invite_failed">邀请失败</string>
    <string name="biz_live_end_pk">结束PK</string>
    <string name="biz_live_stop_pk_dialog_content">PK尚未结束，强制结束后会返回普通直播模式</string>
    <string name="biz_live_immediate_end">立即结束</string>
    <string name="biz_live_accept_new_pick_seat">收到新的连麦申请</string>
    <string name="biz_live_ignore">忽略</string>
    <string name="biz_live_click_see">点击查看</string>
    <string name="biz_live_end_of_pk">”结束了PK</string>
    <string name="biz_live_the_other_cancel_invite">对方取消邀请</string>
    <string name="biz_live_answer_the_timeout">接听超时</string>
    <string name="biz_live_accept">接受</string>
    <string name="biz_live_reject">拒绝</string>
    <string name="biz_live_invite_you_pk_whether_to_accept">邀请你进行PK，是否接受？</string>
    <string name="biz_live_the_other_party_reject_your_accept">对方拒绝了你的PK邀请</string>
    <string name="biz_live_enter_pk_failed">进入PK直播失败</string>
    <string name="biz_live_server_error">服务器异常</string>
    <string name="biz_live_the_other_party_no_response">对方无响应</string>
    <string name="biz_live_pk_request_time_out">PK连接超时，已自动取消</string>
    <string name="biz_live_the_other_did_not_answer_please_try_again_later">对方未接听，请稍后重试</string>
    <string name="biz_live_the_other_party_is_pking_please_try_again_later">对方正在进行PK，请稍后重试</string>
    <string name="biz_live_enter_chatroom_failed">加入聊天室失败</string>
    <string name="biz_live_network_is_not_stable_live_is_end">网络不稳定，直播已结束</string>
    <string name="biz_live_authorization_failed">授权失败</string>
    <string name="biz_live_zero_coin">0云币</string>
    <string name="biz_live_setting_function_to_be_improved">设置功能待完善</string>
    <string name="biz_live_data_statistics_function_to_be_improved">数据统计功能待完善</string>
    <string name="biz_live_sure_end_live">是否确认结束直播？</string>
    <string name="biz_live_please_refresh">请刷新</string>
    <string name="biz_live_login_expried_tips">登录已过期，请重新登录</string>
    <string name="biz_live_select_anchor_to_pk">选择主播进行PK</string>
    <string name="biz_live_invite_anchor_pk">发起PK</string>
    <string name="biz_live_with_music">伴音</string>
    <string name="biz_live_bgm">背景音乐</string>
    <string name="biz_live_music_two">音乐2</string>
    <string name="biz_live_music_one">音乐1</string>
    <string name="biz_live_audio_effect">音效</string>
    <string name="biz_live_audio_effect_two">音效2</string>
    <string name="biz_live_audio_effect_one">音效1</string>
    <string name="biz_live_empty_live">暂无直播哦</string>
    <string name="biz_live_say_something">说点什么...</string>
    <string name="biz_live_resolution">分辨率</string>
    <string name="biz_live_frame">帧率</string>
    <string name="biz_live_audio_quality">音频质量</string>
    <string name="biz_live_music">音乐</string>
    <string name="biz_live_standard">标准</string>
    <string name="biz_live_has_end">直播已经结束啦！</string>
    <string name="biz_live_back">返回</string>
    <string name="biz_live_guide_tip">上下滑动，即可观看其他直播</string>
    <string name="biz_live_reconnection">重新连接</string>
    <string name="biz_live_send">发送</string>
    <string name="biz_live_start_live">开始直播</string>
    <string name="biz_live_punishment">惩罚</string>
</resources>
