<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2021 NetEase, Inc.  All rights reserved.
  ~  Use of this source code is governed by a MIT license that can be found in the LICENSE file
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:paddingLeft="20dp"
    android:paddingRight="16dp"
    android:clipToPadding="false"
    android:paddingBottom="12dp">

    <RelativeLayout
        android:id="@+id/rly_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_12"
        android:paddingTop="@dimen/dp_12"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biz_live_with_music"
            android:textColor="#FF0F0C0A"
            android:textSize="@dimen/text_size_16"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <View
        android:layout_below="@+id/rly_title"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="-20dp"
        android:layout_marginEnd="-16dp"
        android:background="#33000000" />

    <TextView
        android:id="@+id/tv_background_music"
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        android:text="@string/biz_live_bgm"
        android:layout_below="@+id/rly_title"
        android:textColor="#222222"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_music_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/setting_button_bg"
        android:layout_below="@+id/rly_title"
        android:text="@string/biz_live_music_two"
        android:layout_marginTop="12dp"
        android:textColor="#222222"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_music_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@id/tv_music_2"
        android:layout_below="@+id/rly_title"
        android:background="@drawable/setting_button_bg"
        android:text="@string/biz_live_music_one"
        android:layout_marginTop="12dp"
        android:textColor="#222222"
        android:textSize="14sp" />


    <LinearLayout
        android:id="@+id/ll_music_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_music_2"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/sound_loud" />

        <SeekBar
            android:id="@+id/music_song_volume_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:max="100"
            android:maxHeight="2dp"
            android:paddingLeft="10dp"
            android:progress="50"
            android:progressDrawable="@drawable/background_process_control_seekbar_bg"
            android:saveEnabled="true"
            android:thumb="@drawable/seekbar_custom_thumb" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_audio_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_music_container"
        android:layout_marginTop="20dp"
        android:text="@string/biz_live_audio_effect"
        android:textColor="#222222"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_audio_effect_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_music_container"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/setting_button_bg"
        android:text="@string/biz_live_audio_effect_two"
        android:textColor="#222222"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/tv_audio_effect_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_music_container"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@id/tv_audio_effect_2"
        android:background="@drawable/setting_button_bg"
        android:text="@string/biz_live_audio_effect_one"
        android:textColor="#222222"
        android:textSize="14sp" />


    <LinearLayout
        android:id="@+id/ll_audio_effect_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_audio_effect_2"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/sound_loud" />

        <SeekBar
            android:id="@+id/audio_effect_volume_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:max="100"
            android:maxHeight="2dp"
            android:paddingLeft="10dp"
            android:progress="50"
            android:progressDrawable="@drawable/background_process_control_seekbar_bg"
            android:saveEnabled="true"
            android:thumb="@drawable/seekbar_custom_thumb" />
    </LinearLayout>

</RelativeLayout>

