<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2021 NetEase, Inc.  All rights reserved.
  ~  Use of this source code is governed by a MIT license that can be found in the LICENSE file
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_12"
        android:paddingTop="@dimen/dp_12"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biz_live_setting"
            android:textColor="#FF0F0C0A"
            android:textSize="@dimen/text_size_16"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/iv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/reset" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#33000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_14"
            android:text="@string/biz_live_resolution" />

        <TextView
            android:id="@+id/tv_1080p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/setting_button_bg"
            android:text="1080P"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/setting_button_text"
            android:layout_marginStart="@dimen/dp_8" />

        <TextView
            android:id="@+id/tv_720p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_1080p"
            android:layout_marginStart="@dimen/dp_8"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/setting_button_text"
            android:text="720P"
            android:background="@drawable/setting_button_bg" />

        <TextView
            android:id="@+id/tv_360p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_720p"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/setting_button_text"
            android:text="360P"
            android:background="@drawable/setting_button_bg" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="#33000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_14"
            android:text="@string/biz_live_frame" />

        <TextView
            android:id="@+id/tv_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/setting_button_bg"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/setting_button_text"
            android:text="30"
            android:layout_marginStart="@dimen/dp_8" />

        <TextView
            android:id="@+id/tv_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_30"
            android:layout_marginStart="@dimen/dp_8"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/setting_button_text"
            android:text="24"
            android:background="@drawable/setting_button_bg" />

        <TextView
            android:id="@+id/tv_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_24"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/setting_button_text"
            android:text="15"
            android:background="@drawable/setting_button_bg" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="#33000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:layout_marginBottom="12dp"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_14"
            android:text="@string/biz_live_audio_quality" />

        <TextView
            android:id="@+id/tv_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/setting_button_text"
            android:background="@drawable/setting_button_bg"
            android:text="@string/biz_live_music"
            android:layout_marginStart="@dimen/dp_8" />

        <TextView
            android:id="@+id/tv_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_music"
            android:layout_marginStart="@dimen/dp_8"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/setting_button_text"
            android:text="@string/biz_live_standard"
            android:background="@drawable/setting_button_bg" />

    </RelativeLayout>


</LinearLayout>
